Implement edit and delete stack functionality

--- a/Flashcards.rthring/Flashcards.rthring/Flashcards.rthring.csproj
+++ b/Flashcards.rthring/Flashcards.rthring/Flashcards.rthring.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.3.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0" />
